objects/tmpAgentExam__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <label>ApplicationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessPhone__c</fullName>
        <label>BusinessPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>tmpAgentExam</relationshipLabel>
        <relationshipName>tmpAgentExam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>CountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DriversLicenseNumber__c</fullName>
        <label>DriversLicenseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DriversLicenseState__c</fullName>
        <label>DriversLicenseState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdentificationNumber__c</fullName>
        <label>IdentificationNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <label>License No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassportNumber__c</fullName>
        <label>PassportNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProofOfIdentity__c</fullName>
        <label>ProofOfIdentity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAgentNumber__c</fullName>
        <label>ServiceAgentNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateOrCountry__c</fullName>
        <label>StateOrCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>tmpAgentExam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ID__c</columns>
        <columns>UserName__c</columns>
        <columns>Password__c</columns>
        <columns>FirstName__c</columns>
        <columns>MiddleName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>tmpAgentExam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tmpAgentExam</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>